added supplemental requirement 5
